<resources>
    <string name="app_name">Abono</string>
    <string name="total">Total</string>
    <string name="monthly">Monthly</string>
    <string name="annually">Annually</string>
    <string name="add">Add a subscription</string>
    <string name="save">Save</string>
    <string name="name_field_label">Name</string>
    <string name="price_field_label">Price</string>
    <string name="frequency_field_label">Frequency</string>
    <string name="description_field_label">Description</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="category">Category</string>
    <string name="addCategory">Add a category</string>

    <string-array name="frequency_array">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Semesterly</item>
        <item>Annually</item>
    </string-array>

    <string-array name="priority_array">
        <item>Indispensable</item>
        <item>Important</item>
        <item>Optional</item>
    </string-array>
</resources>
